--- a/index.html
+++ b/index.html
@@ -24,28 +24,6 @@
 
         }
     </style>
-    <style>
-        .m-button {
-            font-size: var(--font-size);
-            padding: 0 var(--font-size);
-            border-radius: var(--border-radius);
-            border: 2px solid var(--border-color);
-            background: var(--button-bg);
-            color: var(--color);
-        }
-
-        .m-button:hover {
-            border-color: var(--border-color-hover);
-        }
-
-        .m-button:active {
-            border-color: var(--button-active-bg);
-        }
-
-        .m-button:focus {
-            outline: none;
-        }
-    </style>
 </head>
 
 <body>
@@ -53,16 +31,7 @@
         {{message}}
         <m-button></m-button>
     </div>
-    <script src="./vue.js"></script>
-    <script src="./button.js"></script>
-    <script>
-        new Vue({
-            el: "#app",
-            data: {
-                message: "hi"
-            }
-        })
-    </script>
+    <script src="./src/app.js"></script>
 </body>
 
 </html>
