学习vue设计，使用main.js加载App.vue挂载到html文件里。实现loading按钮。

--- a/index.html
+++ b/index.html
@@ -55,37 +55,10 @@
 </head>
 
 <body>
-    <div id="app">
-        <div class="section-buttons">
-            <m-button>按钮</m-button>
-            <m-button icon="#icon-top">按钮</m-button>
-            <m-button class-prefix="monsterUIHtml" icon="#icon-top">排版按钮</m-button>
-            <m-button>
-                <svg class="diyIcon" aria-hidden="true">
-                    <use xlink:href="#icon-top"></use>
-                </svg>
-                自定义按钮
-                <svg class="diyIcon" aria-hidden="true">
-                    <use xlink:href="#icon-top"></use>
-                </svg>
-            </m-button>
-        </div>
+    <div id="app"></div>
 
-        <div class="section-icons">
-            <span>图标组件</span><br>
-            <m-icon icon="#icon-dwon"></m-icon>
-            <m-icon icon="#icon-top"></m-icon>
-            <m-icon icon="#icon-left"></m-icon>
-            <m-icon icon="#icon-setting"></m-icon>
-            <m-icon icon="#icon-good"></m-icon>
-            <m-icon icon="#icon-right"></m-icon>
-            <m-icon icon="#icon-download"></m-icon>
-        </div>
-
-
-    </div>
     <script defer src="./public/iconfont.js"></script>
-    <script defer src="./src/app.js"></script>
+    <script defer src="./src/main.js"></script>
 </body>
 
 
