封装一个用户自定义层的m-button-group组件，该设计存在底层UI库里并不合适。该组件设计了solt插槽类型检测，传入指定组件，否则警告。

--- a/index.html
+++ b/index.html
@@ -11,43 +11,18 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            line-height: 1.2em;
+
         }
 
         :root {
             --font-size: 1em;
             --button-bg: rgba(89, 200, 173, 1);
             --button-active-bg: #eee;
-            --border-radius: calc(3*var(--font-size));
+            --border-radius: calc(3 * var(--font-size));
             --color: #333;
             --border-color: #999;
             --border-color-hover: #666;
-
-        }
-
-        .section-buttons {
-            display: flex;
-        }
-
-        .monsterUIHtml-layout {
-            display: flex;
-            flex-direction: row-reverse;
-            flex-wrap: nowrap;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .monsterUIHtml-icon {
-            margin: 0 calc(0.2 * var(--font-size));
-            color: red;
-        }
-
-        .diyIcon {
-            width: 1em;
-            height: 1em;
-            vertical-align: -0.15em;
-            fill: currentColor;
-            overflow: hidden;
-            color: blue;
         }
     </style>
 
